local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "hi"
  labels:
    app: jupyterhub-freeport
  name: jupyterhub-freeport
  namespace: jupyterhub-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyterhub-freeport
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jupyterhub-freeport
    spec:
      hostAliases:
        - ip: "172.24.178.16"
          hostnames:
            - "lb-apiserver-ml.kubernetes.local"
        - ip: "172.27.11.186"
          hostnames:
            - "dev.bigdata.local"
      containers:
        - name: jupyterhub-freeport
          image: ${IMAGE_TAG}
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: 1000m
              memory: 1000Mi
            requests:
              cpu: 300m
              memory: 600Mi
          livenessProbe:
            httpGet:
              path: /getSpawnNode
              port: 8000
            initialDelaySeconds: 30 
            failureThreshold: 3
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /getSpawnNode
              port: 8000
            initialDelaySeconds: 30
            failureThreshold: 3
            periodSeconds: 5
          lifecycle:
            preStop:
              exec:
                command: ["/bin/bash", "-c", "sleep 15"]
---
apiVersion: v1
kind: Service
metadata:
  name: jupyterhub-freeport
  namespace: jupyterhub-new
  labels:
    app: jupyterhub-freeport
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: jupyterhub-freeport
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: jupyterhub-freeport
  namespace: jupyterhub-new
spec:
  rules:
    - host: ${HOST_APP}
      http:
        paths:
          - backend:
              serviceName: jupyterhub-freeport
              servicePort: 80
            path: /${API_PATH}/v2(/|$)(.*)
